Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-50090

FreeType Courier New wrong line-space when set to italic/bold

    XMLWordPrintable

Details

    • 22bf1f28f944f87d263582f5c7044133a33e2cdc

    Description

      The user wants to use a Text Edit example for her future project (at least some parts of it). While playing with fonts, the user noticed, the line space for the FreeType Courier New is changing depending on is it normal or bold/italic.

      The expected behaviour:

      line space is not changed

      what actually happens:

      line space is changed.

      How to reproduce:

      • Compile with MSVC 2013 and run the Text Edit example (can be found in Qt Creator Examples) on Windows 7 platform with -platform
        windows:fontengine=freetype
      • Select all and change font to the FreeType Courier New
      • Keep text selected and change the it to italic or bold
      • You should notice the difference in line-space

      Seen on Linux as well. But not that bad as on Windows 7.

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              esabraha Eskil Abrahamsen Blomfeldt
              kileppal Kimmo Leppälä
              Votes:
              1 Vote for this issue
              Watchers:
              5 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes